--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,57 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+.grid-background {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px),
+                      linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
+    background-size: 40px 40px;
+}
+
+.nav-item {
+    @apply transition duration-300 hover:text-black/60 text-sm font-medium
+}
+
+.landing-section {
+    @apply pt-14 text-center w-full max-w-4xl mx-auto px-4
+}
+
+.landing-card {
+    @apply relative overflow-hidden p-3 border rounded-3xl border-black/15 bg-white shadow-lg shadow-black/5
+}
+
+.landing-title {
+    @apply text-2xl mb-5 mt-2 font-serif
+}
+
+.landing-section ul {
+    @apply text-start
+}
+
+.landing-card * {
+    @apply relative z-[2]
+}
+
+.section-bg{
+    @apply absolute bg-linear-to-b from-blue-100 to-white h-40 w-full left-0 top-0 z-[1]
+}
+
+.section-list {
+    @apply space-y-2
+}
+
+.section-item {
+    @apply p-4 bg-neutral-200/40 rounded-xl border border-black/10
+}
+
+.section-title {
+    @apply text-lg font-semibold text-neutral-900
+}
+
+.section-description {
+    @apply text-neutral-600 text-sm
+}
+
+.btn {
+    @apply transition duration-300 bg-blue-600 hover:bg-blue-700 p-1 px-3 font-medium cursor-pointer text-white rounded-xl inline-block shadow-lg hover:shadow-blue-600/30
+}
